--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.8.0",
     "react-app-rewired": "^1.5.2"
   }
 }
