--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "antd": "^3.6.5",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-saga": "^0.16.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
