--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "antd": "^3.6.5",
+    "feathers": "^2.2.4",
+    "feathers-authentication-client": "^0.3.3",
+    "feathers-hooks": "^2.1.2",
+    "feathers-socketio": "^2.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
@@ -11,7 +15,8 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "socket.io-client": "^2.1.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
