--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-saga": "^0.16.0",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "styled-components": "^3.3.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
